--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,11 @@ name: CI on Push and Pull Request
 
 on: 
   push:
-    branches: [ master ]
+    branches:
+      - '*'
   pull_request:
-    branches: [ master ]
-    #tags:
-    #- '*'
+    branches:
+      - '*'
 
 jobs:
   Practice:
@@ -32,7 +32,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Android
       run: |
-        cd SampleApp
         nuget restore
         cd SampleApp.Android
         msbuild SampleApp.Android.csproj /verbosity:normal /t:Rebuild /p:Configuration=Debug
@@ -42,6 +41,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: iOS
       run: |
-        cd SampleApp
         nuget restore
         msbuild SampleApp.iOS/SampleApp.iOS.csproj /verbosity:normal /t:Rebuild /p:Platform=iPhoneSimulator /p:Configuration=Debug
