--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,23 +9,17 @@ on:
       - '*'
 
 jobs:
-  Practice:
-    runs-on: macos-latest  
+  Tests:
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
+    - names: Unit Tests
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
-    - name: Show what in there
-      run: |
-        ls
-    - name: Show what it's inside
-      run: |
-        cd ..
-        ls
+        nuget restore
+        cd UnitTests
+        dotnet build
+        dotnet test
+
   Android:
     runs-on: macos-latest
     steps:
@@ -35,6 +29,7 @@ jobs:
         nuget restore
         cd SampleApp.Android
         msbuild SampleApp.Android.csproj /verbosity:normal /t:Rebuild /p:Configuration=Debug
+
   iOS:
     runs-on: macos-latest
     steps:
